[package]
name = "wayland-window"
version = "0.7.0"
authors = ["Victor Berger <victor.berger@m4x.org>"]
repository = "https://github.com/Smithay/wayland-window"
documentation = "https://smithay.github.io/wayland-window/wayland_window/"
license = "MIT"
description = "A minimalistic window-decorations library built on top of wayland-client."
categories = ["gui"]

[badges]
travis-ci = { repository = "Smithay/wayland-window" }

[dependencies]
byteorder = "1.0"
tempfile = "2.0"
wayland-client = { version = "0.9.9", features = ["cursor"] }
wayland-protocols = { version = "0.9.9", features = ["client", "unstable_protocols"] }

[dev-dependencies]
wayland-client = { version = "0.9.9", features = ["cursor", "dlopen"] }
